Fix: right align modal buttons

--- a/src/styles/isomer-cms/elements/modal.scss
+++ b/src/styles/isomer-cms/elements/modal.scss
@@ -79,6 +79,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      margin-left: auto;
     }
   }
 }
